Added TSMessages to display neat info/warn/error messages. Added those messages in case the user cancel linkedin login or it fails for some reason

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "External/AFNetworking"]
 	path = External/AFNetworking
 	url = https://github.com/AFNetworking/AFNetworking.git
+[submodule "External/TSMessages"]
+	path = External/TSMessages
+	url = https://github.com/toursprung/TSMessages.git
